--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+**/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -23,6 +24,13 @@
 # misc
 .DS_Store
 *.pem
+
+# python
+__pycache__/
+**/__pycache__/
+*.pyc
+*.pyo
+*.pyd
 
 # debug
 npm-debug.log*
